--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Custom styles for this template -->
     <link href="css/main.css" rel="stylesheet">
 
-    <title>Technical Documentation Page freeCodecamp</title>
+    <title>Technical Documentation Page, freeCodeCamp</title>
   </head>
   <body>
 
@@ -23,31 +23,40 @@
         <div class="col-2">
             <nav id="navbar">
             <header>JS Documentation</header>
-          <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-            <!--<a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Introduction</a>-->
-            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Introduction</a>
-            <a class="nav-link" id="v-pills-chapter1-tab" data-toggle="pill" href="#v-pills-chapter1" role="tab" aria-controls="v-pills-chapter1" aria-selected="false">What you should already know</a>
-            <a class="nav-link" id="v-pills-chapter2-tab" data-toggle="pill" href="#v-pills-chapter2" role="tab" aria-controls="v-pills-chapter2" aria-selected="false">JavaScript and Java</a>
-            <a class="nav-link" id="v-pills-chapter3-tab" data-toggle="pill" href="#v-pills-chapter3" role="tab" aria-controls="v-pills-chapter3" aria-selected="false">Hello World</a>
-            <a class="nav-link" id="v-pills-chapter4-tab" data-toggle="pill" href="#v-pills-chapter4" role="tab" aria-controls="v-pills-chapter4" aria-selected="false">Variables</a>
-            <a class="nav-link" id="v-pills-chapter5-tab" data-toggle="pill" href="#v-pills-chapter5" role="tab" aria-controls="v-pills-chapter5" aria-selected="false">Declaring variables</a>
-            <a class="nav-link" id="v-pills-chapter6-tab" data-toggle="pill" href="#v-pills-chapter6" role="tab" aria-controls="v-pills-chapter6" aria-selected="false">Variable scope</a>
-            <a class="nav-link" id="v-pills-chapter7-tab" data-toggle="pill" href="#v-pills-chapter7" role="tab" aria-controls="v-pills-chapter7" aria-selected="false">Global variables</a>
-            <a class="nav-link" id="v-pills-chapter8-tab" data-toggle="pill" href="#v-pills-chapter8" role="tab" aria-controls="v-pills-chapter8" aria-selected="false">Constants</a>
-            <a class="nav-link" id="v-pills-chapter9-tab" data-toggle="pill" href="#v-pills-chapter9" role="tab" aria-controls="v-pills-chapter9" aria-selected="false">Data types</a>
-            <a class="nav-link" id="v-pills-chapter10-tab" data-toggle="pill" href="#v-pills-chapter10" role="tab" aria-controls="v-pills-chapter10" aria-selected="false">if...else statement</a>
-            <a class="nav-link" id="v-pills-chapter11-tab" data-toggle="pill" href="#v-pills-chapter11" role="tab" aria-controls="v-pills-chapter11" aria-selected="false">while statement</a>
-            <a class="nav-link" id="v-pills-chapter12-tab" data-toggle="pill" href="#v-pills-chapter12" role="tab" aria-controls="v-pills-chapter12" aria-selected="false">Function declarations</a>
-            <a class="nav-link" id="v-pills-chapter13-tab" data-toggle="pill" href="#v-pills-chapter13" role="tab" aria-controls="v-pills-chapter13" aria-selected="false">Reference</a>
+          <div class="nav flex-column nav-pills" >
+            <a class="nav-link"href="#Introduction">Introduction</a>
+            <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
+            <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+            <a class="nav-link" href="#Hello_world">Hello World</a>
+            <a class="nav-link" href="#Variables">Variables</a>
+            <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+            <a class="nav-link" href="#Variable_scope">Variable scope</a>
+            <a class="nav-link" href="#Global_variables">Global variables</a>
+            <a class="nav-link" href="#Constants">Constants</a>
+            <a class="nav-link" href="#Data_types">Data types</a>
+            <a class="nav-link" href="#if...else_statement">if...else statement</a>
+            <a class="nav-link" href="#while_statement">while statement</a>
+            <a class="nav-link" href="#Function_declarations">Function declarations</a>
+            <a class="nav-link" href="#Reference">Reference</a>
           </div>
+          <hr>
+          <div class="social-icons">
+                        <p style="text-align: center">Made for <a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-technical-documentation-page">freeCodeCamp</a></p>
+                        <p style="text-align: center">by Michael Honer</p>
+                        <p style="text-align: center"><a href="https://www.freecodecamp.org/michaelhoner"><i class="fab fa-free-code-camp"></i></a>
+                        <a href="https://www.linkedin.com/in/michael-honer-74748ab1/"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/michaelhoner"><i class="fab fa-github"></i></a>
+                        </p>
+                </div>
           </nav>
         </div>
 
 <!--Content-->        
         <div class="col-8">
-<!--Main-doc--><main id="main-doc">
+<!--Main-doc-->
+        <main id="main-doc">
           <div class="tab-content" id="v-pills-tabContent">
-            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab"><section class="main-section" id="Introduction">
+            <div><section class="main-section" id="Introduction">
                 <header>Introduction</header>
                 <article>  
                     <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
@@ -57,7 +66,7 @@
                     <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation.</li>
                     <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.</li>
                 </article></section></div>
-            <div class="tab-pane fade" id="v-pills-chapter1" role="tabpanel" aria-labelledby="v-pills-chapter1-tab"><section class="main-section" id="What_you_should_already_know">
+            <div><section class="main-section" id="What_you_should_already_know">
                 <header>What you should already know</header>
                 <article>
                     <p>This guide assumes you have the following basic background:</p>
@@ -67,7 +76,7 @@
                     <li>Some programming experience. If you are new to programming, try one of the tutorials linked on the main page about JavaScript.</li>
                   
                 </article></section></div>
-            <div class="tab-pane fade" id="v-pills-chapter2" role="tabpanel" aria-labelledby="v-pills-chapter2-tab"><section class="main-section" id="JavaScript_and_Java">
+            <div><section class="main-section" id="JavaScript_and_Java">
                     <header>JavaScript and Java</header>
                     <article>
                     <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
@@ -76,7 +85,7 @@
                 <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter3" role="tabpanel" aria-labelledby="v-pills-chapter3-tab"><section class="main-section" id="Hello_world">
+            <div><section class="main-section" id="Hello_world">
                     <header>Hello world</header>
                     <article> 
                 To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:
@@ -89,7 +98,7 @@
                 Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter4" role="tabpanel" aria-labelledby="v-pills-chapter4-tab"><section class="main-section" id="Variables">
+            <div><section class="main-section" id="Variables">
                     <header>Variables</header>
                     <p>
                 You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.
@@ -104,7 +113,7 @@
                     </p>
                    
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter5" role="tabpanel" aria-labelledby="v-pills-chapter5-tab"><section class="main-section" id="Declaring_variables">
+            <div><section class="main-section" id="Declaring_variables">
                     <header>Declaring variables</header>
                     <article>
                 You can declare a variable in three ways:
@@ -119,7 +128,7 @@
                       </p>
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter6" role="tabpanel" aria-labelledby="v-pills-chapter6-tab"><section class="main-section" id="Variable_scope">
+            <div><section class="main-section" id="Variable_scope">
                     <header>Variable scope</header>
                     <article>
                      <p> When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it is available only within that function.</p>
@@ -138,7 +147,7 @@
                 // ReferenceError: y is not defined</code>
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter7" role="tabpanel" aria-labelledby="v-pills-chapter7-tab"><section class="main-section" id="Global_variables">
+            <div><section class="main-section" id="Global_variables">
                     <header>Global variables</header>
                     <article>
                 <p>Global variables are in fact properties of the global object. In web pages the global object is window, so you can set and access global variables using the window.variable syntax.</p>
@@ -146,7 +155,7 @@
                 <p>Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber.</p>
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter8" role="tabpanel" aria-labelledby="v-pills-chapter8-tab"><section class="main-section" id="Constants">
+            <div><section class="main-section" id="Constants">
                     <header>Constants</header>
                     <article>
                 <p>You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or underscore characters.</p>
@@ -172,7 +181,7 @@
                 MY_OBJECT.key = "otherValue";</code>
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter9" role="tabpanel" aria-labelledby="v-pills-chapter9-tab"><section class="main-section" id="Data_types">
+            <div><section class="main-section" id="Data_types">
                     <header>Data types</header>
                     <article>
                       <p>The latest ECMAScript standard defines seven data types:</p>
@@ -188,7 +197,7 @@
                 Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter10" role="tabpanel" aria-labelledby="v-pills-chapter10-tab"><section class="main-section" id="if...else_statement">
+            <div><section class="main-section" id="if...else_statement">
                     <header>if...else statement</header>
                     <article>
                 Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:
@@ -231,7 +240,7 @@
                 }</code>
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter11" role="tabpanel" aria-labelledby="v-pills-chapter11-tab"><section class="main-section" id="while_statement">
+            <div><section class="main-section" id="while_statement">
                     <header>while statement</header>
                     <article>
                 A while statement executes its statements as long as a specified condition evaluates to true. A while statement looks as follows:
@@ -262,7 +271,7 @@
                  <p>After completing the third pass, the condition n &lt; 3 is no longer true, so the loop terminates.</p>
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter12" role="tabpanel" aria-labelledby="v-pills-chapter12-tab"><section class="main-section" id="Function_declarations">
+            <div><section class="main-section" id="Function_declarations">
                     <header>Function declarations</header>
                     <article> 
                 A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:
@@ -281,14 +290,14 @@
                 <p>Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function.</p>
                     </article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter13" role="tabpanel" aria-labelledby="v-pills-chapter13-tab"><section class="main-section" id="Reference">
+            <div><section class="main-section" id="Reference">
                     <header>Reference</header>
                     <article>
                       <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">MDN</a>
                     </li></article>
                     </section></div>
-            <div class="tab-pane fade" id="v-pills-chapter13" role="tabpanel" aria-labelledby="v-pills-chapter13-tab">...</div>
-            <div class="tab-pane fade" id="v-pills-chapter14" role="tabpanel" aria-labelledby="v-pills-chapter14-tab">...</div>
+            <div>...</div>
+            <div>...</div>
           </div>
         </main>
         </div>        
@@ -303,7 +312,7 @@
                     <a href="https://github.com/michaelhoner">
                       <i class="fab fa-github"></i>
                     </a>
-                    Made by, Michael Honer
+                    Made for <a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-technical-documentation-page">freeCodeCamp</a>, by Michael Honer
             </div>
     </footer>
 
