--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!--Navbar-->
     <div class="row">
         <div class="col-2">
-            <nav id="navbar">
+        <nav id="navbar">
             <header>JS Documentation</header>
           <div class="nav flex-column nav-pills" >
             <a class="nav-link"href="#Introduction">Introduction</a>
@@ -302,17 +302,13 @@
         </main>
         </div>        
     </div>
-
+<!--Footer-->
     <footer>
             <div class="social-icons">
                     <a href="https://www.freecodecamp.org/michaelhoner"><i class="fab fa-free-code-camp"></i></a>
-                    <a href="https://www.linkedin.com/in/michael-honer-74748ab1/">
-                      <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a href="https://github.com/michaelhoner">
-                      <i class="fab fa-github"></i>
-                    </a>
-                    Made for <a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-technical-documentation-page">freeCodeCamp</a>, by Michael Honer
+                    <a href="https://www.linkedin.com/in/michael-honer-74748ab1/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/michaelhoner"><i class="fab fa-github"></i></a>
+                    Made for <a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-technical-documentation-page">freeCodeCamp</a>by Michael Honer
             </div>
     </footer>
 
